# FastAPIExample

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  example.env  main.py  pyproject.toml
.github/workflows/: test_app.yml
src/db/: actions.py  conn.py  errors.py  models.py  session.py
src/middleware/: logging.py
src/models/: request.py  response.py
src/routers/: entities.py
tests/: conftest.py
tests/test_db/: test_actions.py
tests/test_routers/: test_entities.py
